Очень хочется на стажировку golang. Я самоучка, надеюсь на стажировке меня многому научат
